# ethos

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DOCUSHELL_ATOM_OSS_PRODUCT_REQUIREMENTS.md  GOVERNANCE.md  IMPLEMENTATION_PLAN.md  Makefile  NOTICE  README.md  SECURITY.md  SPEC.md  clippy.toml  deny.toml  pyproject.toml  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: adapter_request.yml  benchmark_question.yml  bug_report.yml  config.yml  parser_failure.yml
.github/scripts/: _lightcheck.py  cargo_manifest_guard.py  check_dco.py  check_golden_change_rationale.py  check_release_boundary_paths.py  claims_gate.py  gate_zero_evidence_preflight.py  generate_release_notice_bundle.py  generate_third_party_manifest.py  makefile_guard.py  package_publication_candidate_activation.py  public_boundary_claims_gate.py  readiness_gate.py  smoke_release_cli_artifact.py  test_app_answer_release_contract.py  test_app_answer_release_demo.py  test_app_answer_release_release_prep.py  test_check_golden_change_rationale.py  test_ci_workflow.py  test_determinism_workflow.py  test_evidence_anchor_v1_contract.py  test_execution_status.py  test_first_public_release_artifact_evidence.py  test_first_public_release_final_decider.py  test_first_public_release_scope_decision.py  (+221 more)
adapters/grounding/opendataloader-json/: Cargo.toml  README.md
adapters/grounding/opendataloader-json/src/: lib.rs
adapters/grounding/opendataloader-json/tests/fixtures/: odl-sample.json
benchmarks/: competitors.lock.json
crates/ethos-cli/: Cargo.toml
crates/ethos-cli/src/: assembly.rs  main.rs  worker.rs
crates/ethos-cli/src/cmd/: crop.rs  crop_artifacts.rs  doc.rs  doctor.rs  evidence.rs  mod.rs  rag.rs  security.rs  verify.rs
crates/ethos-cli/tests/: doctor.rs  evidence_anchor.rs  pdf_parse.rs  rag.rs  security_report.rs  verify.rs
crates/ethos-cli/tests/fixtures/font-isolation/: manifest.json
crates/ethos-core/: Cargo.toml  README.md
crates/ethos-core/src/: c14n.rs  codes.rs  config.rs  crop_element.rs  error.rs  evidence_anchor.rs  fingerprint.rs  geom.rs  grounding.rs  ids.rs  lib.rs  model.rs  traits.rs  verify_types.rs
crates/ethos-layout/: Cargo.toml  README.md
crates/ethos-layout/src/: lib.rs
crates/ethos-pdf/: Cargo.toml  NOTICE.md  README.md
crates/ethos-pdf/assets/: README.md  font-substitution-table.json
crates/ethos-pdf/src/: lib.rs
crates/ethos-tables/: Cargo.toml  README.md
crates/ethos-tables/src/: lib.rs
crates/ethos-verify/: Cargo.toml  NOTICE.md  README.md
crates/ethos-verify/src/: lib.rs
docs/: IMPLEMENTATION_PLAN.md  RELEASE_OPERATOR_RUNBOOK.md  app-answer-release-contract.md  architecture.md  benchmark-ownership.md  benchmark-plan.md  bring-your-own-parser.md  determinism-contract.md  ethos-product-requirements.md  evidence-anchor-v1-contract.md  execution-status.md  gate-zero-evidence-runbook.md  landscape-log.md  milestone-b-exit-checklist.md  milestone-d-capability-downgrade-contract.md  milestone-d-claim-kind-boundary-contract.md  milestone-d-crop-element-contract.md  milestone-d-crop-element-surface-shape-contract.md  milestone-d-grounding-source-contract.md  milestone-d-opendataloader-adapter-shape-contract.md  milestone-d-sandbox-subprocess-contract.md  milestone-d-verify-citations-contract.md  milestone-e-fixture-candidates.json  milestone-e-fixture-promotion-criteria.json  milestone-e-internal-trust-loop-blocker-ledger.json  milestone-e-internal-trust-loop-rehearsal-evidence-matrix.json  milestone-e-internal-trust-loop-use-protocol.json  milestone-e-internal-trust-loop-walkthrough.json  milestone-e-package-publication-approval-prep.json  milestone-e-prep-scope.md  milestone-e-public-approval-lane-blockers.json  milestone-e-public-beta-approval-prep.json  milestone-e-public-beta-current-main-refresh-prep.json  milestone-e-public-facing-readiness-ledger.json  pdfium-manual-setup.md  pdfium-profile.md  public-boundary-claims.json  public-release-checklist.md  release-artifact-notices.md  roadmap.md  (+3 more)
examples/: README.md
fixtures/: README.md  evaluate_layout_alpha.py  manifest.json  test_evaluate_layout_alpha.py  test_validate_fixtures.py  validate_fixtures.py
profiles/: ethos-deterministic-v1.json
python/: QUICKSTART.md  README.md
schemas/: README.md  ethos-app-answer-release-decision.schema.json  ethos-capability-downgrade-contract.schema.json  ethos-chunks.schema.json  ethos-citations.schema.json  ethos-claim-kind-boundary-contract.schema.json  ethos-crop-descriptor.schema.json  ethos-crop-element-contract.schema.json  ethos-crop-element-request.schema.json  ethos-crop-element-surface-shape-contract.schema.json  ethos-deterministic-profile.schema.json  ethos-document.schema.json  ethos-evidence-anchor-contract.schema.json  ethos-evidence-anchor-report.schema.json  ethos-evidence-anchor-request.schema.json  ethos-grounding-source-contract.schema.json  ethos-milestone-e-fixture-candidates.schema.json  ethos-milestone-e-fixture-promotion-criteria.schema.json  ethos-milestone-e-internal-trust-loop-blocker-ledger.schema.json  ethos-milestone-e-internal-trust-loop-rehearsal-evidence-matrix.schema.json  ethos-milestone-e-internal-trust-loop-use-protocol.schema.json  ethos-milestone-e-internal-trust-loop-walkthrough.schema.json  ethos-milestone-e-package-publication-approval-prep.schema.json  ethos-milestone-e-public-approval-lane-blockers.schema.json  ethos-milestone-e-public-beta-approval-prep.schema.json  ethos-milestone-e-public-beta-current-main-refresh-prep.schema.json  ethos-milestone-e-public-facing-readiness-ledger.schema.json  ethos-opendataloader-adapter-shape-contract.schema.json  ethos-sandbox-subprocess-contract.schema.json  ethos-sandbox-subprocess-request.schema.json  ethos-security-report.schema.json  ethos-verification-config.schema.json  ethos-verification-report.schema.json  ethos-verify-citations-contract.schema.json  font_policy_validation.py  security_report_validation.py  table_model_validation.py  test_font_policy_validation.py  test_security_report_validation.py  test_table_model_validation.py  (+1 more)
(+469 files in other folders)
