[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "ethos-pdf"
version = "0.1.2"
description = "Python wrapper for the Ethos document evidence CLI."
readme = "python/README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
authors = [
  { name = "The Ethos maintainers" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Homepage = "https://github.com/docushell/ethos"
Repository = "https://github.com/docushell/ethos"
Issues = "https://github.com/docushell/ethos/issues"

[tool.setuptools]
package-dir = { "" = "python" }

[tool.setuptools.packages.find]
where = ["python"]
include = ["ethos_pdf*"]
