[package]
name = "ethos-cli"
description = "The `ethos` CLI — public command groups doc / rag / verify + fingerprint"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "ethos"
path = "src/main.rs"

[dependencies]
ethos-core = { workspace = true, features = ["full"] }
ethos-layout = { workspace = true }
ethos-tables = { workspace = true }
ethos-pdf = { path = "../ethos-pdf", version = "0.1.0" }
ethos-verify = { path = "../ethos-verify", version = "0.1.0" }
ethos-grounding-opendataloader-json = { path = "../../adapters/grounding/opendataloader-json", version = "0.1.0" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
