[package]
name = "ethos-layout"
publish = false
description = "Deterministic basic layout engine for Ethos extraction spans"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
ethos-core = { workspace = true, features = ["full"] }
