[package]
name = "ethos-tables"
publish = false
description = "Deterministic table candidate extraction for Ethos spans"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
ethos-core = { workspace = true, features = ["full"] }
