[package]
name = "ethos-grounding-opendataloader-json"
description = "GroundingSource adapter stub over OpenDataLoader PDF JSON output (A stub, B alpha, D v1)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Same boundary discipline as ethos-verify: the grounding trait module only.
ethos-core = { workspace = true, features = ["grounding"] }
serde = { workspace = true }
serde_json = { workspace = true }
